# prob-seq

./: TAGS  compositional-hmm.cabal  notes-interface.txt  notes.txt  prob-seq.cabal  profile.sh  smol.cabal  stack.yaml
app/: Main.hs
examples/: ex1.st
pomegranate/: build_hmm.py  path  read_st.py  shell  test.st
profiling/: Main.hs
src/: .#Main.hs  .#SequenceCompositions.hs  CLI.hs  ConstructionFiles.hs  Inference.hs  Main.hs  MatrixUtils.hs  SMoL.hs  Sampling.hs  Sequence.hs  SequenceCompositions.hs  SparseMatrix.hs  SparseMatrixEigen.hs  SparseMatrixLA.hs  SparseTransFiles.hs  TransitionComposition.hs  Types.hs
src/Data/: Fix.hs
src/SMoL/: Constructors.hs  DirichletInference.hs  EmissionsInference.hs  Inference.hs  Likelihood.hs  Matrix.hs  Tags.hs  Types.hs
src/SMoL/Matrix/: Emissions.hs  IO.hs  Operations.hs  ProbSeqMatrixUtils.hs  Sampling.hs  SparseMatrixUtils.hs  Types.hs
src/SMoL/Matrix/IO/: Read.hs  StateLabels.hs  TransMatrix.hs  Write.hs
src/SMoL/Matrix/Operations/: AndThen.hs  Collapsing.hs  Deterministic.hs  EitherOr.hs  Filtering.hs  Geometric.hs  Insertion.hs  Products.hs  Reverse.hs  SkipDist.hs
src/SMoL/Tags/: Utils.hs
src/Sequence/: AST.hs  ASTFix.hs  Constructors.hs  CoreConstructors.hs  Emission.hs  Matrix.hs  Operations.hs  ProbTree.hs  Sampling.hs  Tags.hs  Types.hs  Utils.hs
src/Sequence/IO/: TransMatrix.hs
src/Sequence/Matrix/: Emissions.hs  IO.hs  Operations.hs  ProbSeqMatrixUtils.hs  Sampling.hs  SparseMatrixUtils.hs  Types.hs  Utils.hs
src/Sequence/Matrix/IO/: .#Write.hs  Read.hs  StateLabels.hs  TransMatrix.hs  Write.hs
src/Sequence/Matrix/Operations/: AndThen.hs  Collapsing.hs  Deterministic.hs  EitherOr.hs  Filtering.hs  Geometric.hs  Insertion.hs  Products.hs  Reverse.hs  SkipDist.hs
test/: ASTFix.hs  ArbitraryAST.hs  ArbitraryConstructors.hs  ConstructorSampling.hs  Debug.hs  DebugOperations.hs  RandomSubmatrixTest.hs  SequenceConstructor.hs  Spec.hs  Test.hs  TestAST.hs  TestConstructors.hs  TestOperations.hs  Utils.hs  debug-notes.txt
validation/: EmissionIO.hs  EmissionPermutation.hs  GeneralizedSNP.hs  Main.hs  MinION.hs  Plot.hs  Pomegranate.hs  SHMM.hs  SNP.hs  Tester.hs
validation/pomegratate/: build_hmm.py  deamer_test.stb  test.csv  test.st
