name:                compositional-hmm
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/compositional-hmm#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Sequence
                     , Sequence.Operations
                     , Sequence.Sampling
                     , Sequence.Utils
                     , Sequence.Types
                     , Sequence.IO.TransMatrix
                     , Sequence.Emission
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , sparse-lin-alg
                     , vector
                     , MonadRandom
                     , random
                     , monad-loops
                     , text
                     , filepath

executable compositional-hmm
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       CLI
                     , ConstructionFiles
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , compositional-hmm
                     , sparse-lin-alg
                     , vector
                     , MonadRandom
                     , random
                     , monad-loops
                     , tinylang
                     , text
                     , filepath
                     , optparse-applicative

test-suite compositional-hmm-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , compositional-hmm
                     , sparse-lin-alg
                     , vector
                     , text
                     , QuickCheck
                     , tasty-quickcheck
                     , tasty-smallcheck
                     , tasty-hspec
                     , tasty-hunit
                     , tasty
