name:                prob-seq
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/prob-seq#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Sequence
                     , Sequence.AST
                     , Sequence.ProbTree
                     , Sequence.Types
                     , Sequence.Matrix.Operations
                     , Sequence.Matrix.Sampling
                     , Sequence.Matrix.Utils
                     , Sequence.Matrix.Types
                     , Sequence.Matrix.IO.TransMatrix
                     , Sequence.Matrix.Emissions
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , sparse-lin-alg
                     , vector
                     , MonadRandom
                     , monad-loops
                     , filepath
                     , containers
                     , data-fix
                     , either
                     , QuickCheck

test-suite prob-seq-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , prob-seq
                     , sparse-lin-alg
                     , vector
                     , MonadRandom
                     , monad-loops
                     , QuickCheck
                     , tasty-quickcheck
                     , tasty-smallcheck
                     , tasty-hspec
                     , tasty-hunit
                     , tasty
