name:                smol
version:             0.1.0.0
homepage:            https://github.com/rybern/smol
license:             BSD3
license-file:        LICENSE
author:              Ryan Bernstein
maintainer:          ryan.bernstein@columbia.edu
copyright:           2017 Ryan Bernstein
category:            Machine Learning
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

-- executable profiling
  -- hs-source-dirs:      profiling
  -- main-is:             Main.hs
  -- default-language:    Haskell2010
  -- build-depends:       base >= 4.7 && < 5
                     -- , sparse-lin-alg
                     -- , vector
                     -- , smol

library
  hs-source-dirs:      src
  exposed-modules:     SMoL
                     , SMoL.Tags
                     , SMoL.Tags.Utils
                     , SMoL.Constructors
                     , SMoL.Matrix
                     , SMoL.Matrix.Sampling
                     , SMoL.Matrix.Emissions
                     , SMoL.Matrix.IO
                     , SMoL.Matrix.Operations
                     , SMoL.Matrix.Operations.AndThen
                     , SMoL.Matrix.Operations.Collapsing
                     , SMoL.Matrix.Operations.Deterministic
                     , SMoL.Matrix.Operations.EitherOr
                     , SMoL.Matrix.Operations.Filtering
                     , SMoL.Matrix.Operations.Geometric
                     , SMoL.Matrix.Operations.Insertion
                     , SMoL.Matrix.Operations.Products
                     , SMoL.Matrix.Operations.Reverse
                     , SMoL.Matrix.Operations.SkipDist
                     , SMoL.Matrix.Types
                     , SMoL.Types
                     , SMoL.Matrix.IO.Write
                     , SMoL.Matrix.IO.Read
                     , SMoL.Matrix.IO.StateLabels
                     , SMoL.Matrix.IO.TransMatrix
                     , SMoL.Matrix.ProbSeqMatrixUtils
                     , SMoL.Matrix.SparseMatrixUtils
                     , SMoL.Inference
                     , SparseMatrix
                     , Data.Fix
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     -- , sparse-lin-alg
                     , vector
                     , MonadRandom
                     , monad-loops
                     , filepath
                     , containers
                     , either
                     , QuickCheck
                     , split
                     , attoparsec
                     , text
                     , parallel
                     , mtl
                     , cassava
                     , bytestring
                     , bytestring-conversion
                     , eigen

test-suite smol-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  other-modules:       ArbitraryConstructors
                     , ConstructorSampling
                     , TestAST
                     , TestConstructors
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , smol
                     -- , parse-lin-alg
                     , vector
                     , MonadRandom
                     , monad-loops
                     , QuickCheck
                     , tasty-quickcheck
                     , tasty-smallcheck
                     , tasty-hspec
                     , tasty-hunit
                     , tasty
